making some progress

--- a/src/app/components/examples/data-key-settings/echarts-line-chart-data-key-settings.component.html
+++ b/src/app/components/examples/data-key-settings/echarts-line-chart-data-key-settings.component.html
@@ -14,9 +14,13 @@
     <mat-form-field class="mat-block" appearance="outline">
       <mat-label>Subplot Assignment</mat-label>
       <mat-select formControlName="axisAssignment">
-        <mat-option value="Top">Top</mat-option>
-        <mat-option value="Middle">Middle</mat-option>
-        <mat-option value="Bottom">Bottom</mat-option>
+        <mat-option value="Top">Subplot 1 (Top)</mat-option>
+        <mat-option value="Middle">Subplot 2 (Middle)</mat-option>
+        <mat-option value="Bottom">Subplot 3 (Bottom)</mat-option>
+        <mat-option value="Plot4">Subplot 4</mat-option>
+        <mat-option value="Plot5">Subplot 5</mat-option>
+        <mat-option value="Plot6">Subplot 6</mat-option>
+        <mat-option value="Plot7">Subplot 7</mat-option>
       </mat-select>
     </mat-form-field>
 
