--- a/src/app/components/examples/settings/echarts-line-chart-settings.component.html
+++ b/src/app/components/examples/settings/echarts-line-chart-settings.component.html
@@ -26,6 +26,14 @@
       <div fxLayout="column" fxLayoutGap="16px">
         <mat-checkbox formControlName="smooth">Smooth out</mat-checkbox>
         
+        <!-- Multiple Devices Mode -->
+        <mat-checkbox formControlName="multipleDevices">
+          Multiple Devices Mode (7 Subplots)
+        </mat-checkbox>
+        <div class="info-text" style="color: rgba(0,0,0,0.6); font-size: 12px; margin-left: 32px; margin-top: -8px;">
+          Enable to support up to 7 subplots for multiple devices. When disabled, uses standard 3 subplot mode.
+        </div>
+        
         <!-- Left Y-Axis Settings -->
         <div class="axis-section">
           <h4>Left Y-Axis</h4>
