--- a/src/app/components/examples/echarts-line-chart.component.html
+++ b/src/app/components/examples/echarts-line-chart.component.html
@@ -87,40 +87,44 @@
       </div>
       
       <!-- Full table mode (only when visible) -->
-      <table class="entity-table" *ngIf="isSidebarVisible && sidebarDisplayMode === 'full'">
-        <tbody>
-          <tr *ngFor="let entity of entityList" 
-              class="entity-row" 
-              [class.entity-row--disabled]="!entity.visible"
-              [class.pulse-effect]="lastPulsedEntity === entity.name"
-              (click)="toggleEntityVisibility(entity.name)">
-            <td class="swatch-cell">
-              <div class="swatch-box" [style.background-color]="entity.color"></div>
-            </td>
-            <td class="entity-name" [title]="entity.displayName + ' (' + entity.name + ')' ">{{ entity.displayName }}</td>
-            <td class="entity-count" [title]="'Series: ' + entity.count + ', Points: ' + entity.dataPoints">
-              {{ entity.count }}<span class="data-points"> ({{ entity.dataPoints }})</span>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-scroll-container" *ngIf="isSidebarVisible && sidebarDisplayMode === 'full'">
+        <table class="entity-table">
+          <tbody>
+            <tr *ngFor="let entity of entityList" 
+                class="entity-row" 
+                [class.entity-row--disabled]="!entity.visible"
+                [class.pulse-effect]="lastPulsedEntity === entity.name"
+                (click)="toggleEntityVisibility(entity.name)">
+              <td class="swatch-cell">
+                <div class="swatch-box" [style.background-color]="entity.color"></div>
+              </td>
+              <td class="entity-name" [title]="entity.displayName + ' (' + entity.name + ')' ">{{ entity.displayName }}</td>
+              <td class="entity-count" [title]="'Series: ' + entity.count + ', Points: ' + entity.dataPoints">
+                {{ entity.count }}<span class="data-points"> ({{ entity.dataPoints }})</span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       
       <!-- Compact mode (only when visible) -->
-      <table class="entity-table-compact" *ngIf="isSidebarVisible && sidebarDisplayMode === 'compact'">
-        <tbody>
-          <tr *ngFor="let entity of entityList" 
-              class="entity-row-compact" 
-              [class.entity-row--disabled]="!entity.visible"
-              (click)="toggleEntityVisibility(entity.name)">
-            <td class="swatch-cell">
-              <div class="swatch-box" [style.background-color]="entity.color"></div>
-            </td>
-            <td class="entity-name-compact" [title]="entity.displayName">
-              {{ entity.displayName }}
-            </td>
-          </tr>
-        </tbody>
-      </table>
+      <div class="table-scroll-container" *ngIf="isSidebarVisible && sidebarDisplayMode === 'compact'">
+        <table class="entity-table-compact">
+          <tbody>
+            <tr *ngFor="let entity of entityList" 
+                class="entity-row-compact" 
+                [class.entity-row--disabled]="!entity.visible"
+                (click)="toggleEntityVisibility(entity.name)">
+              <td class="swatch-cell">
+                <div class="swatch-box" [style.background-color]="entity.color"></div>
+              </td>
+              <td class="entity-name-compact" [title]="entity.displayName">
+                {{ entity.displayName }}
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
       
       <!-- Colors only mode (when visible or collapsed with colors mode) -->
       <div class="colors-container" *ngIf="(isSidebarVisible && sidebarDisplayMode === 'colors') || (!isSidebarVisible && sidebarCollapsedMode === 'colors')">
