--- a/src/app/components/examples/echarts-line-chart.component.html
+++ b/src/app/components/examples/echarts-line-chart.component.html
@@ -99,7 +99,7 @@
               <td class="swatch-cell">
                 <div class="swatch-box" [style.background-color]="entity.color"></div>
               </td>
-              <td class="entity-name" [title]="entity.label + (entity.deviceName ? ' (' + entity.deviceName + ')' : '')">{{ entity.displayName }}</td>
+              <td class="entity-name" [title]="'label: ' + entity.label + (entity.deviceName ? ' (deviceName: ' + entity.deviceName + ')' : '') + '\nData from entity server scope attributes'">{{ entity.displayName }}</td>
               <td class="entity-count" [title]="'Series: ' + entity.count + ', Points: ' + entity.dataPoints">
                 {{ entity.count }}<span class="data-points"> ({{ entity.dataPoints }})</span>
               </td>
@@ -119,7 +119,7 @@
               <td class="swatch-cell">
                 <div class="swatch-box" [style.background-color]="entity.color"></div>
               </td>
-              <td class="entity-name-compact" [title]="entity.label + (entity.deviceName ? ' (' + entity.deviceName + ')' : '')">
+              <td class="entity-name-compact" [title]="'label: ' + entity.label + (entity.deviceName ? ' (deviceName: ' + entity.deviceName + ')' : '') + '\nData from entity server scope attributes'">
                 {{ entity.displayName }}
               </td>
             </tr>
@@ -133,7 +133,7 @@
              class="color-box"
              [class.color-box--disabled]="!entity.visible"
              [style.background-color]="entity.color"
-             [title]="entity.label + (entity.deviceName ? ' (' + entity.deviceName + ')' : '') + ' - Click to toggle'"
+             [title]="'label: ' + entity.label + (entity.deviceName ? ' (deviceName: ' + entity.deviceName + ')' : '') + '\nData from entity server scope attributes\nClick to toggle'"
              (click)="toggleEntityVisibility(entity.name)">
         </div>
       </div>
